# twcai

./: Cargo.toml  README.md
examples/: conversation.rs  simple_chat.rs
src/: client.rs  error.rs  lib.rs
src/api/: client.rs  conversations.rs  mod.rs  responses.rs
src/types/: chat.rs  common.rs  conversation.rs  mod.rs  response.rs
tests/: integration_tests.rs
